.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in Scrooge's user's guide.

Unreleased
----------

- scrooge-generator: Scala generated client now has a asClosable method returns c.t.u.Closable,
  client now can be closed by calling `client.asClosable.close`. Note that `asClosable` won't be
  generated if it is also defined by the user. ``PHAB_ID=D129645``

18.1.0
-------

- scrooge-generator: Update `c.t.fingale.thrit.service.MethodPerEndpointBuilder`
  to build `MethodPerEndpoint` types. Add new `ThriftServiceBuilder` for
  building the higher-kinded form from a `ServicePerEndpoint`. Users should
  prefer using the `MethodPerEndpointBuilder`. ``PHAB_ID=D127538``

- scrooge-generator: Add more metadata to generated java objects ``PHAB_ID=D122997``
  Includes:
    * struct and field annotations from the idl files
    * which fields have default values
    * which field values of TType.STRING are actually binary fields

- scrooge: Add support for `scrooge.Request` and `scrooge.Response`
  types in generated `ThriftMethod` code. ``PHAB_ID=D122767``

17.12.0
-------

- scrooge: Introduce `scrooge.Request` and `scrooge.Response` envelopes which
  are used in `ReqRepServicePerEndpoint` interfaces and associated code. The
  scrooge `Request` and `Response` allow for passing "header" information (via
  ThriftMux Message contexts) between clients and servers. For instance, a
  server can implement a `ReqRepServicePerEndpoint`, and set response headers
  along with a method response, e.g.,

  ```
  class MyService extends MyService.ReqRepServicePerEndpoint {

    def foo: Service[Request[Foo.Args], Response[Foo.SuccessType]] = {
      Service.mk[Request[Foo.Args], Response[Foo.SuccessType]] { request: Request[Foo.Args] =>
        val result = ... // computations
        Future
          .value(
            Response(