@@ -291,9 +291,6 @@ object {{ServiceName}} { self =>
     type FunctionType = {{functionType}}
     type ReqRepFunctionType = {{reqRepFunctionType}}
 
-    type ServiceType = _root_.com.twitter.finagle.Service[Args, Result]
-    type ReqRepServiceType = _root_.com.twitter.finagle.Service[_root_.com.twitter.scrooge.Request[Args], _root_.com.twitter.scrooge.Response[Result]]
-
     type ServiceIfaceServiceType = _root_.com.twitter.finagle.Service[Args, SuccessType]
     type ServicePerEndpointServiceType = _root_.com.twitter.finagle.Service[Args, SuccessType]
     type ReqRepServicePerEndpointServiceType = _root_.com.twitter.finagle.Service[_root_.com.twitter.scrooge.Request[Args], _root_.com.twitter.scrooge.Response[SuccessType]]
@@ -314,15 +311,6 @@ object {{ServiceName}} { self =>
       }
 
     private[this] val toResult = (res: SuccessType) => Result({{^isVoid}}Some(res){{/isVoid}})
-
-    def functionToService(f: FunctionType): ServiceType =
-      _root_.com.twitter.finagle.Service.mk { args: Args =>
-        f(args).map(toResult)
-      }
-
-    def serviceToFunction(svc: ServiceType): FunctionType = { args: Args =>
-      _root_.com.twitter.finagle.thrift.ThriftServiceIface.resultFilter(this).andThen(svc).apply(args)
-    }
 {{/withFinagle}}
 {{^withFinagle}}
     type FunctionType = Nothing
@@ -336,8 +324,6 @@ object {{ServiceName}} { self =>
     def toServiceIfaceService(f: FunctionType): ServiceIfaceServiceType = ???
     def toServicePerEndpointService(f: FunctionType): ServicePerEndpointServiceType = ???
     def toReqRepServicePerEndpointService(f: ReqRepFunctionType): ReqRepServicePerEndpointServiceType = ???
-    def functionToService(f: FunctionType): ServiceType = ???
-    def serviceToFunction(svc: ServiceType): FunctionType = ???
 {{/withFinagle}}
 
     val name: String = "{{originalFuncName}}"
